# ge_deployment_practice

./: .gitignore  README.md  app.py  package.json  pyproject.toml  requirements.txt  setup.py  tasks.py
containers/great_expectations/: great_expectations.yml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: staging.chk.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/taxi/: demo.json
infrastructure/: infrastructure_stack.py
tests/unit/: test_infrastructure_stack.py
