[tool.poetry]
name = "ge_example"
version = "0.1.0"
description = "Practice productionalizing GE deployment"
authors = ["Blake Enyart <blake.enyart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0","setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "poetry.core.masonry.api"
