[tool.poetry]
name = "ge_practice_deployment"
version = "0.1.0"
description = "Practice deployment of GE"
authors = ["Blake Enyart <blake.enyart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"aws-solutions-constructs.aws-cloudfront-s3" = "^1.87.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0","setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "poetry.core.masonry.api"
